--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
           <div class="Thumb-Section">
             <img
               src="/img/thumb1.png"
-              onclick="Change('img1.png','#017143')"
+              onclick="Change('img1.png','#00ff9636')"
               alt="thumb1"
             />
             <img
               src="/img/thumb2.png"
-              onclick="Change('img2.png','#eb7495')"
+              onclick="Change('img2.png','#d29aa5')"
               alt="thumb2"
             />
             <img
               src="/img/thumb3.png"
-              onclick="Change('img3.png','#d752b1')"
+              onclick="Change('img3.png','#883370')"
               alt="thumb3"
             />
           </div>
