--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
             />
             <img
               src="/img/thumb2.png"
-              onclick="Change('img2.png','#d29aa5')"
+              onclick="Change('img2.png','00ff9636')"
               alt="thumb2"
             />
             <img
               src="/img/thumb3.png"
-              onclick="Change('img3.png','#883370')"
+              onclick="Change('img3.png','00ff9636')"
               alt="thumb3"
             />
           </div>
